<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome to Trip Tracker!!!</string>
    <string name="app_name">Trip Tracker</string>
    
    <string name="Insert">Start Tracking</string>
    <string name="Retrieve">Retrieve All Coordinate Entries</string>
    <string name="Retrieve1">Retrieve 1 coordinate entry</string>
    <string name="Stop">Stop Tracking</string>
    <string name="Delete">Truncate all rows</string>
    <string name="ManualInsert">Manual Insert location</string>
    <string name="GPSStatus">Get GPS Status</string>
    <string name="Export">Export My Data</string>
    
    <string name="labelStart">Start Tracking</string>
    <string name="Units">Units</string>
    <string name="Miles">Miles</string>
    <string name="Meters">Meters</string>
    <string name="NoGPS">Please enable a location service in Settings.  No location service is detected.</string>
    <string name="TruncateWhileTripRunning">A trip is running; please stop your trip before deleting data.</string>
    <string name="ExportDirectory">/PersonData</string>
    <string name="ExportFileName">mileage.csv</string>
    <string name="ExportFileNameGPX">triptracker.gpx</string>
    <string name="stopSubText">Additional functionality available via the menu button.</string>
    
    <string name="GPSUpdateMinimumDistance">1</string>
    <string name="GPSUpdateMinimumTime">3000</string>
    
</resources>
