<?xml version="1.0" encoding="utf-8"?> 

<ScrollView 
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"> 

    <!-- 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
  <com.google.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="a14f7b925f43be9"
                         ads:adSize="BANNER"
                         ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
                         ads:loadAdOnCreate="true"/>
</LinearLayout> 

-->


<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"> 

  <com.google.ads.AdView android:id="@+id/adView"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         ads:adUnitId="a14f7b925f43be9"
                         ads:adSize="BANNER"
                         ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
                         ads:loadAdOnCreate="true"/>
    
    
<TextView android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/hello"
	android:paddingTop="10dp"
	android:paddingBottom="15dp"
	android:textSize="18dp"
 />




<!--   <Button android:layout_width="wrap_content" android:id="@+id/button1" android:text="@string/Insert" android:layout_height="wrap_content"></Button>
 -->

    <Button 
  android:id="@+id/btnStart"
  android:layout_width="fill_parent"  
  android:layout_height="60dp"
  android:layout_margin="3dp"
  android:gravity="center"

  android:background="@drawable/nice_button"

  android:text="@string/labelStart"
  android:textColor="@android:color/white"
  android:textSize="18sp"
  android:shadowRadius="1"
  android:shadowDx="1"
  android:shadowDy="1"
  android:shadowColor="@android:color/black"
  
></Button>
    
<Button android:layout_width="wrap_content" android:id="@+id/buttonManualInsert" android:text="@string/ManualInsert" android:layout_height="wrap_content"></Button>
<Button android:layout_width="wrap_content" android:id="@+id/button2" android:text="@string/Retrieve" android:layout_height="wrap_content"></Button> 
<Button android:layout_width="wrap_content" android:id="@+id/button4" android:text="@string/Retrieve1" android:layout_height="wrap_content"></Button>
<Button android:layout_width="wrap_content" android:id="@+id/button3" android:text="@string/Delete" android:layout_height="wrap_content"></Button>
<Button android:layout_width="wrap_content" android:id="@+id/btnExport" android:text="@string/Export" android:layout_height="wrap_content"></Button>
<!-- <Button android:layout_width="wrap_content" android:id="@+id/button5" android:text="@string/GPSStatus" android:layout_height="wrap_content"></Button>   -->


<TextView android:id="@+id/out_text"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="" /> 

<TextView android:id="@+id/TextView1"
    android:text="" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:paddingBottom="15dp"></TextView>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/ShowDataTable"
    android:paddingTop="10dp"
    android:paddingBottom="15dp"
    >
    </TableLayout>
    

<!--      <com.google.ads.AdView android:id="@+id/adViewBottom"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         ads:adUnitId="a14f7b925f43be9"
                         ads:adSize="BANNER"
                         ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
                         ads:loadAdOnCreate="true"/>
  
  -->      
</LinearLayout> 
</ScrollView>

